--- a/src/configuration.properties
+++ b/src/configuration.properties
@@ -1,18 +1,13 @@
 browser=chrome
 
 
-
-
-
-
-
 HMCUrl=https://www.hotelmycamp.com/
 
 HMCValidUsername=manager
 HMCValidPassword=Manager1!
 
 HMCWrongUsername=manager1
-HMCWrongPassword=manager1!
+HMCWrongPassword=manager1!!
 
 
 AmazonUrl=https://www.amazon.com
