--- a/src/configuration.properties
+++ b/src/configuration.properties
@@ -12,3 +12,4 @@ HMCWrongPassword=manager1!!
 
 AmazonUrl=https://www.amazon.com
 TechproUrl=https://www.techproeducation.com
+DemoqaUrl=https://demoqa.com/webtables
