--- a/src/configuration.properties
+++ b/src/configuration.properties
@@ -13,3 +13,5 @@ HMCWrongPassword=manager1!!
 AmazonUrl=https://www.amazon.com
 TechproUrl=https://www.techproeducation.com
 DemoqaUrl=https://demoqa.com/webtables
+demoGuruUrl = https://demo.guru99.com/test/drag_drop.html
+tutorialUrl = http://tutorialsninja.com/demo/index.php?route=common/home
